# Chibi-sats-tauri

./: LICENSE  README.md  filter_symbols.js  symbols.json  symbols_utf8.json
Chibi-sats/: about.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
Chibi-sats/playwright-report/: index.html
Chibi-sats/src/: App.css  App.tsx  PriceChart.tsx  hooks.ts  i18n.ts  main.tsx  utils.test.ts  utils.ts
Chibi-sats/src-tauri/: Cargo.toml  tauri.conf.json
Chibi-sats/src-tauri/capabilities/: default.json
Chibi-sats/src-tauri/icons/: icon.icns
Chibi-sats/src-tauri/src/: lib.rs  main.rs
Chibi-sats/src/components/: AdBanner.css  AdBanner.test.tsx  AdBanner.tsx
Chibi-sats/src/test/: e2e.test.ts  setup.ts
Chibi-sats/test-results/: .last-run.json
Chibi-sats/test-results/e2e-Chibi-Sats-E2E-should--cd71a-ice-alert-with-manual-price-chromium/: error-context.md
