[package]
name = "chibi-sats"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chibi_sats_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-autostart = "2"
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"     # Оптимизация по размеру (z или s)
lto = true           # Link Time Optimization (уменьшает размер, увеличивает время сборки)
codegen-units = 1    # Уменьшает параллелизм компиляции для лучшей оптимизации
panic = "abort"      # Убирает размотку стека при панике (уменьшает размер и потребление памяти)
strip = true         # Автоматически удаляет отладочные символы из бинарника


